--- a/Basic Git Commands.ipynb
+++ b/Basic Git Commands.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390475e0",
+   "id": "96d40472",
    "metadata": {},
    "source": [
     "` process to initialize git at a new location and connect to origin `"
@@ -191,8 +191,24 @@
    "id": "1688f459",
    "metadata": {},
    "source": [
-    "this is the command to connect a new folder to "
+    "` Process to get out of quote> in mac terminal`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97470684",
+   "metadata": {},
+   "source": [
+    "it means that you've entered something that leads the shell to believe the command is not complete, and you need to enter more text. A \"\\\" character is most likely. Either finish your command or use Ctrl-C to break out of it. It looks like the last quote may be \"smart\" when it should be straight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "392522fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
