--- a/00.Basics/Random Tricks.ipynb
+++ b/00.Basics/Random Tricks.ipynb
@@ -27,6 +27,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d9f8935",
+   "metadata": {},
+   "source": [
+    "defaults write com.apple.desktopservices DSDontWriteNetworkStores true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7cbca13a",
    "metadata": {},
    "source": [
