--- a/00.Basics/Random Tricks.ipynb
+++ b/00.Basics/Random Tricks.ipynb
@@ -27,11 +27,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d9f8935",
+   "id": "0ff3a87d",
    "metadata": {},
    "source": [
     "defaults write com.apple.desktopservices DSDontWriteNetworkStores true"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3579da55",
+   "metadata": {},
+   "source": [
+    "## Deleting .DS_Store files manually \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32231600",
+   "metadata": {},
+   "source": [
+    "Go to Applications > Utilities > Terminal.\n",
+    "\n",
+    "Locate the folder or directory that you want to remove the .DS_Store file from.\n",
+    "\n",
+    "Type “cd” into the Terminal followed by your folder path, so it looks something like this: cd /Users/username/nameoffolder\n",
+    "\n",
+    "Hit Enter.\n",
+    "\n",
+    "Type find . -name '.DS_Store' -type f -delete\n",
+    "\n",
+    "Hit Enter again. \n",
+    "\n",
+    "The .DS_Store files in the selected folder will now disappear.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92060f80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -66,9 +103,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a1adf78",
+   "metadata": {},
+   "source": [
+    "# Deleting .DS_Store files manually \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6600dfad",
+   "metadata": {},
+   "source": [
+    "If you want to go down the manual route and delete .DS_Store files individually, you can do this using the Terminal: \n",
+    "\n",
+    "\n",
+    "Go to Applications > Utilities > Terminal.\n",
+    "\n",
+    "Locate the folder or directory that you want to remove the .DS_Store file from.\n",
+    "\n",
+    "Type “cd” into the Terminal followed by your folder path, so it looks something like this: cd \n",
+    "/Users/username/nameoffolder\n",
+    "\n",
+    "Hit Enter.\n",
+    "\n",
+    "Type find . -name '.DS_Store' -type f -delete\n",
+    "\n",
+    "Hit Enter again. \n",
+    "\n",
+    "The .DS_Store files in the selected folder will now disappear.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa03d40d",
+   "id": "37fc57fd",
    "metadata": {},
    "outputs": [],
    "source": []
