--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -280,9 +280,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20d0d04e",
+   "metadata": {},
+   "source": [
+    "## Removing untracked files (like .DS_Store)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed99a4cd",
+   "metadata": {},
+   "source": [
+    "git clean -f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94ad247a",
+   "metadata": {},
+   "source": [
+    "git clean -f folderpath"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358dfc25",
+   "id": "33bae993",
    "metadata": {},
    "outputs": [],
    "source": []
