--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d0d04e",
+   "id": "985f7069",
    "metadata": {},
    "source": [
     "## Removing untracked files (like .DS_Store)"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed99a4cd",
+   "id": "c8055404",
    "metadata": {},
    "source": [
     "git clean -f"
@@ -297,16 +297,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ad247a",
+   "id": "ec79976f",
    "metadata": {},
    "source": [
     "git clean -f folderpath"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f3c6ec8",
+   "metadata": {},
+   "source": [
+    "## GIT Stages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2bc507c",
+   "metadata": {},
+   "source": [
+    "To brief, I only know there are 3 stages in git untracked, staged, committed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33bae993",
+   "id": "7f9a77b4",
    "metadata": {},
    "outputs": [],
    "source": []
