--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985f7069",
+   "id": "dc2ad87c",
    "metadata": {},
    "source": [
     "## Removing untracked files (like .DS_Store)"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8055404",
+   "id": "2f7b6853",
    "metadata": {},
    "source": [
     "git clean -f"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec79976f",
+   "id": "73b9a83d",
    "metadata": {},
    "source": [
     "git clean -f folderpath"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3c6ec8",
+   "id": "95838d83",
    "metadata": {},
    "source": [
     "## GIT Stages"
@@ -313,16 +313,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2bc507c",
+   "id": "1fbbbd33",
    "metadata": {},
    "source": [
-    "To brief, I only know there are 3 stages in git untracked, staged, committed"
+    "#To brief, I only know there are 3 stages in git untracked, staged, committed#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8513603d",
+   "metadata": {},
+   "source": [
+    "## Adding modified files to stage (when error 'Changes not staged for commit'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f5210a",
+   "metadata": {},
+   "source": [
+    "**git add -u :/    adds all modified file changes to the stage**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de23fba",
+   "metadata": {},
+   "source": [
+    "**git add * :/ adds modified and any new files (that's not gitignore'ed) to the stage**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9a77b4",
+   "id": "2ddb8c74",
    "metadata": {},
    "outputs": [],
    "source": []
