--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -344,9 +344,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1daabe07",
+   "metadata": {},
+   "source": [
+    "## When getting error 'modified new commits\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479921e7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "` git diff `"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ddb8c74",
+   "id": "1cf3137b",
    "metadata": {},
    "outputs": [],
    "source": []
