--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1daabe07",
+   "id": "a03c3909",
    "metadata": {},
    "source": [
     "## When getting error 'modified new commits\""
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479921e7",
+   "id": "746f474f",
    "metadata": {},
    "source": [
     "\n",
@@ -361,9 +361,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "283e8016",
+   "metadata": {},
+   "source": [
+    "\n",
+    "` git add 99.Archive/github-demo `"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf3137b",
+   "id": "3841b489",
    "metadata": {},
    "outputs": [],
    "source": []
