--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -204,6 +204,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f7415be",
+   "metadata": {},
+   "source": [
+    "## Managing branches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf591a8",
+   "metadata": {},
+   "source": [
+    "To delete a local branch in Git, you simply run:\n",
+    "\n",
+    "git branch -d <branch-name>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7403b14",
+   "metadata": {},
+   "source": [
+    "If the branch contains unmerged changes, though, Git will refuse to delete it. If you’re sure you want to do it, you’ll have to force the deletion by replacing the -d parameter with an uppercase D:\n",
+    "\n",
+    "git branch -D <branch-name>\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ba374b8",
+   "metadata": {},
+   "source": [
+    "You don’t use the git branch command to delete a remote branch. You use git push, even if that sounds weird. Here’s how you do it:\n",
+    "\n",
+    "git push --delete <remote name> <branch name>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd998fb4",
    "metadata": {},
    "source": [
