--- a/00.Basics/Basic Git Commands.ipynb
+++ b/00.Basics/Basic Git Commands.ipynb
@@ -212,23 +212,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf591a8",
+   "id": "4b4ff22b",
    "metadata": {},
    "source": [
-    "To delete a local branch in Git, you simply run:\n",
+    "git branch\n",
     "\n",
-    "git branch -d <branch-name>"
+    "List all of the branches in your repository. This is synonymous with git branch --list."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7403b14",
+   "id": "9764932d",
    "metadata": {},
    "source": [
-    "If the branch contains unmerged changes, though, Git will refuse to delete it. If you’re sure you want to do it, you’ll have to force the deletion by replacing the -d parameter with an uppercase D:\n",
+    "git branch < branch >\n",
     "\n",
-    "git branch -D <branch-name>\n",
-    "   "
+    "Create a new branch called ＜branch＞. This does not check out the new branch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "533fea24",
+   "metadata": {},
+   "source": [
+    "git push < new-remote-repo > crazy-experiment~\n",
+    "\n",
+    "pushes the crazy-experiment branch to new-remote-repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf591a8",
+   "metadata": {},
+   "source": [
+    "git branch -d < branch >\n",
+    "\n",
+    "Delete the specified branch. This is a “safe” operation in that Git prevents you from deleting the branch if it has unmerged changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fee5ea8",
+   "metadata": {},
+   "source": [
+    "git branch -D < branch >\n",
+    "\n",
+    "Force delete the specified branch, even if it has unmerged changes. This is the command to use if you want to permanently throw away all of the commits associated with a particular line of development."
    ]
   },
   {
@@ -236,10 +265,29 @@
    "id": "2ba374b8",
    "metadata": {},
    "source": [
-    "You don’t use the git branch command to delete a remote branch. You use git push, even if that sounds weird. Here’s how you do it:\n",
+    "git push --delete < remote name > < branch name >\n",
     "\n",
-    "git push --delete <remote name> <branch name>\n",
-    "\n"
+    "You don’t use the git branch command to delete a remote branch. You use git push, even if that sounds weird. Here’s how you do it:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edd29e91",
+   "metadata": {},
+   "source": [
+    "git branch -m < branch >\n",
+    "\n",
+    "Rename the current branch to ＜branch＞."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b4c25b",
+   "metadata": {},
+   "source": [
+    "git branch -a\n",
+    "\n",
+    "List all remote branches"
    ]
   },
   {
