--- a/03.Section3/A.Practice - Repeat Exercises.ipynb
+++ b/03.Section3/A.Practice - Repeat Exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65dcec2b",
+   "id": "806c179d",
    "metadata": {},
    "source": [
     "<font size = 20, color = 'teal'> Practice - Repeat Exercises <font>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4233f97",
+   "id": "8589dbc0",
    "metadata": {},
    "source": [
     "# TYPES"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c67fdb9",
+   "id": "738a2207",
    "metadata": {},
    "source": [
     "## NSLDTSB"
@@ -26,7 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d976f9f",
+   "id": "81efaddb",
+   "metadata": {},
+   "source": [
+    "**Number, String, List, Dictionary, Tuple, Set, Boolean**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7acd299",
    "metadata": {},
    "source": [
     "Number"
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e51921c6",
+   "id": "977782a3",
    "metadata": {},
    "source": [
     "String"
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc0236d",
+   "id": "9dd43f8c",
    "metadata": {},
    "source": [
     "List"
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec8fbce",
+   "id": "0f567e56",
    "metadata": {},
    "source": [
     "Dictionary"
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3ebf6c",
+   "id": "d21d9499",
    "metadata": {},
    "source": [
     "Tuple"
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f92282",
+   "id": "a6a713a3",
    "metadata": {},
    "source": [
     "Set"
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e027ecbc",
+   "id": "f1fed99b",
    "metadata": {},
    "source": [
     "Bolean"
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc12fc2f",
+   "id": "767028ef",
    "metadata": {},
    "source": [
     "<font size = 30> Numbers <font>"
@@ -91,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1331f06b",
+   "id": "4d28b457",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8531ce5c",
+   "id": "480cc539",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f7ee87e",
+   "id": "65e28915",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a3c3dc3",
+   "id": "09892489",
    "metadata": {},
    "source": [
     "### Mod Operater"
@@ -162,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7c9856e8",
+   "id": "6f679825",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "86ceae73",
+   "id": "8b794990",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b694568",
+   "id": "d2d4eaf3",
    "metadata": {},
    "source": [
     "### Order of Operations"
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60de7a95",
+   "id": "1da9353d",
    "metadata": {},
    "source": [
     "#### PEMDAS -- Paranthesis, Exponent, Multiplication, Division, Addition, Subtraction"
@@ -220,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec29febd",
+   "id": "ea7b233c",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "203bea23",
+   "id": "39290bc0",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2268a440",
+   "id": "46a79910",
    "metadata": {},
    "source": [
     "2.75 * (22.5*3) .... 67.5 * 2.75"
@@ -270,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9663e11",
+   "id": "648bae1a",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc332c7f",
+   "id": "6c500eb2",
    "metadata": {},
    "source": [
     "## Variable Assignments"
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f21baa",
+   "id": "fe51993e",
    "metadata": {},
    "source": [
     "` Dynamic Typing -- means variables can be reassigned to different data types `"
@@ -307,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c5c61a5",
+   "id": "6a955956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c64726bb",
+   "id": "13b37a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a956cc89",
+   "id": "065aa617",
    "metadata": {},
    "source": [
     "` Something like this is not possible in say, C++ where variables need to be declared like int my_dog = 1 `"
@@ -335,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "13f6d2cc",
+   "id": "15433551",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d1b1b101",
+   "id": "74370b20",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "20ae16a1",
+   "id": "f59063cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1b3203ee",
+   "id": "98e4e505",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "85007ada",
+   "id": "73f875a9",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "29f9f0cc",
+   "id": "782ed8a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c2f9f07a",
+   "id": "4eb41da0",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "acde18c1",
+   "id": "7c688379",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b4054df",
+   "id": "9338e073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3a9384d5",
+   "id": "145cb6f0",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e0a8af5",
+   "id": "4a9d3a1b",
    "metadata": {},
    "source": [
     "***"
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb587224",
+   "id": "5f506548",
    "metadata": {},
    "source": [
     "<font size = 30> Strings <font>"
@@ -518,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12235fa",
+   "id": "ca727b34",
    "metadata": {},
    "source": [
     "<font color = 'red'> Strings are ordered sequences <font>"
@@ -527,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7da8f7df",
+   "id": "3eb5f351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61bb9359",
+   "id": "e1cf0d59",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ecc881f9",
+   "id": "f0bf0057",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e477155f",
+   "id": "ab520f3a",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9f462ecd",
+   "id": "e2fe57c3",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "abf54c8f",
+   "id": "5d8f4bc5",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a49a25ce",
+   "id": "f03e6c02",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b748e7bc",
+   "id": "f8e63968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fa662a19",
+   "id": "6f1a8a56",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "be651968",
+   "id": "5efcd9e5",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aa7696dd",
+   "id": "66db0d7a",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cc379985",
+   "id": "9bc88461",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8b6870db",
+   "id": "54944dcf",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "85ebca63",
+   "id": "0c2541a3",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "77916192",
+   "id": "5972daf5",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7478743c",
+   "id": "17c6849d",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3f939d",
+   "id": "02ea3ec5",
    "metadata": {},
    "source": [
     "<font color = 'red'> Step Size <font>"
@@ -847,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e58cf161",
+   "id": "afba7af2",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4e1c8f1f",
+   "id": "b151763a",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "459c2a63",
+   "id": "a4fb32ce",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0df40373",
+   "id": "6533c619",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31469e8c",
+   "id": "b9eb9c89",
    "metadata": {},
    "source": [
     "<font color = 'red'> Reversing a String <font>"
@@ -939,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d0b24f3f",
+   "id": "d9bd8750",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d37968",
+   "id": "f4e75efc",
    "metadata": {},
    "source": [
     "## Print Formatting with Strings"
@@ -968,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4a8c8371",
+   "id": "c71c7c3e",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "26d6f962",
+   "id": "4de28a1c",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b175d615",
+   "id": "987a1fde",
    "metadata": {},
    "outputs": [
     {
@@ -1022,8 +1030,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "e52e6948",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you doing Ziba Joon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('How are you doing{}'.format(\" Ziba Joon\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e1373260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is such an amazing time\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('this is such{}{}{}'.format(' an', ' amazing', ' time'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "95e3b183",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I would like to take Ziba Joon to Ocean Beach for a swim\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('I would like to take {z} to {o} for a swim'.format(z = 'Ziba Joon', o = 'Ocean Beach'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0bab15ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is Ziba Joon doing here in Philadelphia in June\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('what is {p} doing here in {c} in {m}'.format(p = \"Ziba Joon\", c = \"Philadelphia\", m = \"June\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f5dea5c",
+   "metadata": {},
+   "source": [
+    "## Float Fomatting - value, width, precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1529f6e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result was 14.285714285714286\n",
+      "The result was 14.285714285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 100/7\n",
+    "print(\"The result was {}\".format(result))\n",
+    "print(\"The result was {r}\".format(r=result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d050c071",
+   "metadata": {},
+   "source": [
+    "## Using F Strings for formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "95c490bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result is 100.7\n",
+      "The result is 100.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 100.7\n",
+    "print(\"The result is {r}\".format(r = result))\n",
+    "print(f\"The result is {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80dad97d",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "310f31d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam is 10 years old\n",
+      "Sam is 10 years old\n",
+      "Sam is 10 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Sam\"\n",
+    "age = 10\n",
+    "print(\"{n} is {a} years old\".format(n = name, a = age))\n",
+    "print(\"{} is {} years old\".format(name, age))\n",
+    "print(f\"{name} is {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fb5b6dd",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6dc748f4",
+   "id": "d079a1cf",
    "metadata": {},
    "outputs": [],
    "source": []
