--- a/00.Basics/Markdown Formatting.ipynb
+++ b/00.Basics/Markdown Formatting.ipynb
@@ -259,9 +259,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a50a7aa7",
+   "metadata": {},
+   "source": [
+    "## Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "759728e4",
+   "metadata": {},
+   "source": [
+    "| Stretch/Untouched | ProbDistribution | Accuracy |\n",
+    "| --- | --- | --- |\n",
+    "| Stretched | Gaussian | .843 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d9b1956",
+   "metadata": {},
+   "source": [
+    "| # | Number | String | List | Dictionary | Tuple | Set | Boolean |\n",
+    "| --- | --- | --- | --- | --- | --- | --- | --- |\n",
+    "| Example | 1 or 2.1 | 'Gaussian' | [1,2,3] |{'k1' = 123} | (1,2,3) | set(string or number) | 0 or 1 |\n",
+    "| key points | float & integer | | | | | | \n",
+    "| Mutable | Yes | No | | | | | \n",
+    "| Ordered | | NA | Yes | | | \n",
+    "| Index |N | Yes | | | | \n",
+    "| Slice | N | Yes | | | | | | \n",
+    "| Add | NA | - | -  |-  |-  | - |- |\n",
+    "| Remove| -  | -  |- | -|- |- |- |  \n",
+    "|- |- |- |- |- |- |- |- | \n",
+    "|- |- |- |- |- |- |- |- |\n",
+    "|- |- |- |- |- |- |- |- |\n",
+    "|- |- |- |- |- |- |- |- |\n",
+    "|- |- |- |- |- |- |- |- |\n",
+    "|- |- |- |- |- |- |- |- |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdff90c3",
+   "id": "dfbd528a",
    "metadata": {},
    "outputs": [],
    "source": []
