--- a/00.Basics/Markdown Formatting.ipynb
+++ b/00.Basics/Markdown Formatting.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50a7aa7",
+   "id": "e0bbe947",
    "metadata": {},
    "source": [
     "## Tables"
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "759728e4",
+   "id": "624570a5",
    "metadata": {},
    "source": [
     "| Stretch/Untouched | ProbDistribution | Accuracy |\n",
@@ -278,19 +278,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d9b1956",
+   "id": "7947ecf3",
    "metadata": {},
    "source": [
     "| # | Number | String | List | Dictionary | Tuple | Set | Boolean |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- |\n",
-    "| Example | 1 or 2.1 | 'Gaussian' | [1,2,3] |{'k1' = 123} | (1,2,3) | set(string or number) | 0 or 1 |\n",
-    "| key points | float & integer | | | | | | \n",
-    "| Mutable | Yes | No | | | | | \n",
-    "| Ordered | | NA | Yes | | | \n",
-    "| Index |N | Yes | | | | \n",
-    "| Slice | N | Yes | | | | | | \n",
-    "| Add | NA | - | -  |-  |-  | - |- |\n",
-    "| Remove| -  | -  |- | -|- |- |- |  \n",
+    "| Example | 1 or 2.1 | 'hello there' | [1,2,3] |{'k1' = 123} | (1,2,3) | set(string or number) | 0 or 1 |\n",
+    "| Highlight | float & integer | Unordered, Immutable  | Ordered, Mutable | Key Value Pairs |Similar to List, but Immutable |Unordered, Unique | True or False |\n",
+    "|Symbol |- |\" \"  | [ ] | { 'k' : value} | (v1, v2, v3) |set() |- | \n",
+    "| Mutable | Yes | No |Yes | TBD |No |No | - |\n",
+    "| Ordered | - | Yes | Yes |No |Yes | No |- |\n",
+    "| Index | TBD | Yes | Yes | No | TBD | TBD | - |\n",
+    "| Slice | No | Yes | Yes | No | Yes |TBD |- | \n",
+    "| Add | - | - | Yes  |-  | TBD  | - |- |\n",
+    "| Remove| -  | Yes  |- | TBD|- |- |- |  \n",
     "|- |- |- |- |- |- |- |- | \n",
     "|- |- |- |- |- |- |- |- |\n",
     "|- |- |- |- |- |- |- |- |\n",
@@ -302,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfbd528a",
+   "id": "86b70929",
    "metadata": {},
    "outputs": [],
    "source": []
