--- a/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
+++ b/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "10.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -963,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
