--- a/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -47,11 +47,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import randint\n",
+    "num = randint(1,100)\n",
+    "print(num)\n",
+    "\n",
+    "# userguess = input('what is your guess?')\n",
+    "# print(userguess)\n",
+    "\n",
+    "#while guesstemp < 100:\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,11 +71,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# rules of the game\n",
+    "\n",
+    "gamerules = \"Guess a number between 1 and 100\"\n",
+    "print(gamerules)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,11 +92,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "listofguesses = [0]\n",
+    "listofguesses"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,14 +109,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "while True:\n",
+    "\n",
+    "    # we can copy the code from above to take an input\n",
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100. \\n What is your guess?\"))\n",
     "    \n",
-    "    pass"
+    "    if guess < 1 or guess > 100:\n",
+    "        print('Out of Bounds!')\n",
+    "        continue\n",
+    "    break"
    ]
   },
   {
@@ -122,16 +138,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "while True:\n",
     "\n",
     "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100. \\n What is your guess?\"))\n",
+    "    \n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print('Out of Bounds!')\n",
+    "        continue\n",
+    "    \n",
+    "    if guess == num:\n",
+    "        print(f'Congrats, you guessed it correct in only {len(listofguesses)} guesses!')    \n",
+    "        break\n",
+    "    \n",
+    "    listofguesses.append(guess)\n",
+    "    \n",
+    "    if listofguesses[-2]:\n",
+    "        if abs(num-guess) < abs(num-listofguesses[-2]):\n",
+    "            print('Warmer')\n",
+    "        else:\n",
+    "            print('Colder')\n",
+    "    else:\n",
+    "        if abs(num-guess) <= 10:\n",
+    "            print('Warm')\n",
+    "        else:\n",
+    "            print('Cold')"
    ]
   },
   {
