--- a/05.Section5/A.Recap Section 5.ipynb
+++ b/05.Section5/A.Recap Section 5.ipynb
@@ -2080,9 +2080,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16830717",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d378b9e",
+   "metadata": {},
+   "source": [
+    "<font size = 7, color = 'teal'> Abs function\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1c02293e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = -2\n",
+    "absolutenum1 = abs(num1)\n",
+    "print(absolutenum1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fc568289",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute value of -30.33 is: 30.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "floating = -30.33\n",
+    "print('Absolute value of -30.33 is:', abs(floating))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "12adaa64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Magnitude of 3 - 4j is: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random complex number\n",
+    "complex = (3 - 4j)\n",
+    "print('Magnitude of 3 - 4j is:', abs(complex))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e61e9309",
+   "id": "a89d284d",
    "metadata": {},
    "outputs": [],
    "source": []
