--- a/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/02-Python Statements/10-Guessing Game Challenge - Solution.ipynb
+++ b/98.Reference/CourseNotebooks/Complete-Python-3-Bootcamp-master/02-Python Statements/10-Guessing Game Challenge - Solution.ipynb
@@ -45,14 +45,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "num = random.randint(1,100)"
+    "num = random.randint(1,100)\n",
+    "print(num)"
    ]
   },
   {
@@ -102,10 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "guesses = [0]"
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,10 +133,8 @@
      "output_type": "stream",
      "text": [
       "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 500\n",
-      "OUT OF BOUNDS! Please try again: \n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 50\n"
+      "  What is your guess? 102\n",
+      "OUT OF BOUNDS! Please try again: \n"
      ]
     }
    ],
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,32 +172,18 @@
      "output_type": "stream",
      "text": [
       "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 50\n",
-      "COLD!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 75\n",
-      "WARMER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 85\n",
-      "WARMER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 92\n",
-      "COLDER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 80\n",
-      "WARMER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 78\n",
-      "COLDER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 82\n",
-      "WARMER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 83\n",
-      "COLDER!\n",
-      "I'm thinking of a number between 1 and 100.\n",
-      "  What is your guess? 81\n",
-      "CONGRATULATIONS, YOU GUESSED IT IN ONLY 9 GUESSES!!\n"
+      "  What is your guess? 68\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'guesses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# here we compare the player's guess to our number\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m num:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCONGRATULATIONS, YOU GUESSED IT IN ONLY \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(guesses)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m GUESSES!!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# if guess is incorrect, add guess to the list\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'guesses' is not defined"
      ]
     }
    ],
@@ -251,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
