--- a/List of Functions (Running).ipynb
+++ b/List of Functions (Running).ipynb
@@ -54,7 +54,7 @@
    "id": "0d378b9e",
    "metadata": {},
    "source": [
-    "<font size = 7, color = 'teal'> Abs function"
+    "<font size = 7, color = 'teal'> abs"
    ]
   },
   {
@@ -117,9 +117,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6065f780",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f1bcc54",
+   "metadata": {},
+   "source": [
+    "<font size = 7, color = 'teal'> .join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d5dc7721",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JohnPeterVicky\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Join all items in a tuple into a string, using a hash character as separator:\n",
+    "\n",
+    "myTuple = (\"John\", \"Peter\", \"Vicky\")\n",
+    "\n",
+    "x = \"\".join(myTuple)\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363ab91f",
+   "id": "8c6f63fb",
    "metadata": {},
    "outputs": [],
    "source": []
