--- a/98.Reference/30.CourseNotebooks/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/98.Reference/30.CourseNotebooks/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
     "    \n",
     "    # grabn all unique letters from the string\n",
     "    str1 = set(str1)\n",
-    "    \n",
+    "    print(str1)\n",
     "    \n",
     "    # compare alphabnet set with the string set from the input\n",
     "    return str1 == alphaset"
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,8 @@
      "output_type": "stream",
      "text": [
       "{'l', 'v', 'k', 'q', 'g', 'n', 'p', 'e', 'i', 'u', 't', 'f', 'z', 'h', 's', 'o', 'r', 'c', 'y', 'a', 'd', 'w', 'm', 'j', 'b', 'x'}\n",
-      "thequickbrownfoxjumpsoverthelazydog\n"
+      "thequickbrownfoxjumpsoverthelazydog\n",
+      "{'l', 'v', 'k', 'q', 'n', 'p', 'g', 'e', 'i', 'u', 't', 'f', 'z', 'h', 's', 'o', 'r', 'c', 'y', 'a', 'd', 'w', 'm', 'j', 'b', 'x'}\n"
      ]
     },
     {
@@ -617,7 +618,7 @@
        "True"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
