--- a/11.Section 11 (Milestone Project 2)/97 Final GamePlay Script.ipynb
+++ b/11.Section 11 (Milestone Project 2)/97 Final GamePlay Script.ipynb
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,9 @@
       "value of Player's hand is 18\n",
       "Plsyer Wins\n",
       "\n",
-      " Player total chips are at : 160\n"
+      " Player total chips are at : 160\n",
+      "Would you like to play another hand?n\n",
+      "Thank you for playing\n"
      ]
     }
    ],
