--- a/00.Basics/Random Tricks.ipynb
+++ b/00.Basics/Random Tricks.ipynb
@@ -167,7 +167,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fbf76dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c41c7a2",
+   "metadata": {},
+   "source": [
+    "# Finding out where python packages are installed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "43791597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip show tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec2ef67",
    "metadata": {},
    "outputs": [],
    "source": []
